# Awesome-mix-vol.1

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml  codeql.yml
app/: main.cc
include/: BStringt.hpp  ByteString.h  CAAA.hpp  CAira.hpp  CAria.hpp  CBBB.hpp  a.h  a.hpp  afxstr.h  amvalloc.h  amvalloc.hpp  amvcore.h  amvcore.hpp  amvdefine.h  amvdefine.hpp  amvmem.h  amvmem.hpp  amvsimpstr.h  amvsimpstr.hpp  amvstr.h  amvstr.hpp  atlalloc.h  atlmem.h  atlsimpstr.h  atlstr.h  awesomedefine.h  b.h  b.hpp  bstringt.h  bstringt.hpp  cstringt.h
lib/: ByteString.cc  CAira.cc  CAria.cc  CMakeLists.txt  aira.cc
tests/: Awesome_mix_vol_1_test.cc  BString_test.cc  ByteString_test.cc  CAria_test.cc  CMakeLists.txt  Inheriting_from_a_template_test.cc
